Fixed some alignment in the image

--- a/style.css
+++ b/style.css
@@ -172,5 +172,5 @@ body {
     width: auto;
     height: auto;
     border-radius: 10px;
-    justify-self: center;
+    align-self: stretch;
 }
